# slicer-fenics

./: README.md
FEniCS_demo/: CMakeLists.txt
FEniCS_demo/FEniCS_demo_module/: CMakeLists.txt  FEniCS_demo_module.py
mesh/: cube-hex.vtu  cube-tet.vtu
